@@ -7,11 +7,11 @@
 	<key>IBEditorPositions</key>
 	<dict>
 		<key>406</key>
-		<string>505 492 370 392 0 0 1680 1028 </string>
+		<string>655 509 370 392 0 0 1680 1028 </string>
 		<key>419</key>
-		<string>885 196 370 270 0 0 1680 1028 </string>
+		<string>655 570 370 270 0 0 1680 1028 </string>
 		<key>421</key>
-		<string>495 196 370 270 0 0 1680 1028 </string>
+		<string>655 570 370 270 0 0 1680 1028 </string>
 	</dict>
 	<key>IBFramework Version</key>
 	<string>446.1</string>
